Página de sugerencias
Lee las sugerencias desde la base de datos
Se muestra 2 sugerencias por página
Falta separar la hora de publicación de la fecha

--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
@@ -32,7 +32,7 @@
                 <a class="action" href="#"><i class="fas fa-user-friends"></i>Usuarios</a>
             </li>
             <li>
-                <a class="action" href="#"><i class="fas fa-edit"></i>Sugerencias</a>
+                <a class="action" href="{% url 'webadminradio:sugerencias' %}"><i class="fas fa-edit"></i>Sugerencias</a>
             </li>
             <li>
                 <a class="action" href="{% url 'webadminradio:publicidad' %}"><i class="fas fa-ad"></i>Publicidad</a>
