Cambios en el tamplate para mostrar la fecha y hora [#159614132]

--- a/AppRadio/WebAdminRadio/static/webAdminRadio/css/sugerencias.css
+++ b/AppRadio/WebAdminRadio/static/webAdminRadio/css/sugerencias.css
@@ -8,3 +8,12 @@
 .sg_lbl {
     font-weight: bold;
 }
+
+.pagination .active a {
+    background: #3A7390 !important;
+    color: white !important; 
+}
+
+.pagination a {
+    color: #3A7390 !important;
+}
