--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/sugerencias.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/sugerencias.html
@@ -9,11 +9,11 @@
         <div class="row">
             <div class="col-sm">
                 <label class="sg_lbl">Fecha:</label>
-                {{ sugerencia.fecha_creacion }}
+                {{ sugerencia.fecha_creacion|date:"l d F Y" }}
             </div>
             <div class="col-sm">
                 <label class="sg_lbl">Hora:</label>
-                hh:mm:ss
+                {{ sugerencia.fecha_creacion|time:"H:i" }}
             </div>
         </div>
         <div class="row">
