--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
@@ -29,7 +29,7 @@
                 <a class="action" href="#"><i class="fas fa-clipboard-list"></i>Encuestas</a>
             </li>
             <li>
-                <a class="action" href="#"><i class="fas fa-user-friends"></i>Usuarios</a>
+                <a class="action" href="{% url 'webadminradio:usuarios' %}"><i class="fas fa-user-friends"></i>Usuarios</a>
             </li>
             <li>
                 <a class="action" href="{% url 'webadminradio:sugerencias' %}"><i class="fas fa-edit"></i>Sugerencias</a>
