Template agregar concurso, urls y views (no terminado) y modificacion de buscar sugerencia por tipo de sugerencia [#159611312]

--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
@@ -23,7 +23,7 @@
                 <a class="action" href="{% url 'webadminradio:locutores' %}"><i class="fas fa-headset"></i>Locutores</a>
             </li>
             <li>
-                <a class="action" href="#"><i class="fas fa-award"></i>Concursos</a>
+                <a class="action" href="{% url 'webadminradio:concursos' %}"><i class="fas fa-award"></i>Concursos</a>
             </li>
             <li>
                 <a class="action" href="#"><i class="fas fa-clipboard-list"></i>Encuestas</a>
