--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/usuarios.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/usuarios.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/datatables.css' %}">
 {% endblock %}
 {% block agregar_button %}
-<a href="#" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Crear Usuario</i></a>
+<a href="{% url 'webadminradio:agregar_usuario' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Crear Usuario</i></a>
 {% endblock %}
 {% block content %}
     <div class="table-container">
