--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_concurso.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_concurso.html
@@ -42,51 +42,6 @@
             </select>
         </div>
 
-        <!-- Div del emisora -->
-        <div class="form-group">
-            <label for="emisoraSelect">Emisora</label>
-            <select id="emisoraSelect" class="custom-select form-control" name="emisora" oninvalid="this.setCustomValidity('Ingrese una emisora de la lista')" required oninput="this.setCustomValidity('')">
-                <option selected disabled>Seleccione una emisora</option>
-                {% for emisora in emisoras %}
-                    <option value="{{ emisora.nombre}}">{{ emisora.nombre }}</option>
-                {% endfor %}
-            </select>
-        </div>
-
-        <!-- Div del segmento -->
-        <div class="form-group">
-            <label for="emisoraSelect">Segmento</label>
-            <select id="emisoraSelect" class="custom-select form-control" name="emisora" oninvalid="this.setCustomValidity('')" required oninput="this.setCustomValidity('')">
-                <option selected disabled>Seleccione un segmento</option>
-                {% for segmento in segmentos %}
-                    <option value="{{ segmento.nombre}}">{{ segmento.nombre }}</option>
-                {% endfor %}
-            </select>
-        </div>
-
-
-        <!-- Div de url -->
-        <div class="form-group">
-            <label for="urlInput">URL de la publicidad</label>
-            <div class="form-row">
-                <div class="form-group col-md-4">
-                    <input required name="url" id="urlInput" type="text" class="form-control" placeholder="Ingrese el url de la publicidad">
-                </div>
-                <div class="form-group col-md-2"></div>
-            </div>
-        </div>
-        <!-- Div de persona/empresa cliente -->
-        <div class="form-group">
-            <label for="clienteInput">Persona/Empresa Cliente</label>
-            <input required name="cliente" id="clienteInput" type="text" class="form-control" placeholder="Ingrese el nombre de la persona o empresa cliente de la publicidad" maxlength=300></input>
-        </div>
-        <!-- Descripción -->
-        <div class="form-group">
-            <label for="descInput">Descripción</label>
-            <textarea class="form-control" id="descInput" name="descripcion" rows="3" placeholder="Ingrese una breve descripción de la publicidad" oninvalid="this.setCustomValidity('Ingrese una descripcion del segmento')" oninput="this.setCustomValidity('')" maxlength="250" required></textarea>
-        </div>
-
-        <!-- Selección de Emisora -->
         <h5><b>Seleccion de programas</b></h5>
         <hr>
         <!-- Selección de Segmentos -->
@@ -96,30 +51,33 @@
             </div>
         </div>
         <hr>
+        
         <!-- Selección de Frecuencia -->
-        <label>Frecuencia de la publicidad</label>
         <div class="form-group">
             <div id="componente_horario">
                 <horario></horario>
             </div>
-        </div>
-
-        <!-- Div de imagen -->
+        </div>  
+        <!-- Sección de premios -->
         <div class="form-group">
-            <div class="custom-file">
-                <label for="imgSegmento" class="custom-file-label">Foto</label>
-                <input type="file" name="imagen" class="custom-file-input" id="imgSegmento" accept=".png, .jpg, .jpeg" oninvalid="this.setCustomValidity('Ingrese una imagen para el segmento')" oninput="this.setCustomValidity('')" required>
-                <div class="img-holder">
-                    <img id="preview" src="{% static 'webAdminRadio/images/placeholder.png' %}">
-                </div>
+            <div id="componente_premio">
+            <premio></premio>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary btn-lg submit"><i class="fas fa-plus-circle"></i>Agregar Publicidad</button>
+
+        <div class="form-group">
+            <div id="componente_pregunta">
+            <pregunta></pregunta>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary btn-lg submit"><i class="fas fa-plus-circle"></i>Agregar Concurso</button>
     </form>
 {% endblock %}
 {% block page_script %}
 <script src="{% static 'webAdminRadio/js/componentes/ModalInfoComponent.js' %}"></script>
 <script src="{% static 'webAdminRadio/js/img_preview.js' %}"></script>
-<script src="{% static 'webAdminRadio/js/componentes/Frecuencia.js' %}"></script>
+<script src="{% static 'webAdminRadio/js/componentes/Fecha.js' %}"></script>
+<script src="{% static 'webAdminRadio/js/componentes/Premio.js' %}"></script>
+<script src="{% static 'webAdminRadio/js/componentes/Pregunta.js' %}"></script>
 <script src="{% static 'webAdminRadio/js/componentes/EmisoraComponent.js' %}"></script>
 {% endblock %}
