Cambio en componente de pregunta y actualizacion de gitignore [#159611312]

--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_concurso.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_concurso.html
@@ -42,15 +42,14 @@
             </select>
         </div>
 
-        <h5><b>Seleccion de programas</b></h5>
         <hr>
+        <h5><b>Seleccion de programas</b></h5>
         <!-- Selección de Segmentos -->
         <div class="form-group">
             <div id="componente_segmento">
                 <segmento></segmento>
             </div>
         </div>
-        <hr>
         
         <!-- Selección de Frecuencia -->
         <div class="form-group">
@@ -58,16 +57,21 @@
                 <horario></horario>
             </div>
         </div>  
+
+        <hr>
+        <h5><b>Premios</b></h5>
         <!-- Sección de premios -->
         <div class="form-group">
             <div id="componente_premio">
-            <premio></premio>
+                <premio></premio>
             </div>
         </div>
 
+        <hr>
+        <h5><b>Preguntas</b></h5>
         <div class="form-group">
             <div id="componente_pregunta">
-            <pregunta></pregunta>
+                <pregunta></pregunta>
             </div>
         </div>
         <button type="submit" class="btn btn-primary btn-lg submit"><i class="fas fa-plus-circle"></i>Agregar Concurso</button>
