--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
@@ -26,7 +26,7 @@
                 <a class="action" href="{% url 'webadminradio:concursos' %}"><i class="fas fa-award"></i>Concursos</a>
             </li>
             <li>
-                <a class="action" href="#"><i class="fas fa-clipboard-list"></i>Encuestas</a>
+                <a class="action" href="{% url 'webadminradio:encuestas' %}"><i class="fas fa-clipboard-list"></i>Encuestas</a>
             </li>
             <li>
                 <a class="action" href="{% url 'webadminradio:usuarios' %}"><i class="fas fa-user-friends"></i>Usuarios</a>
