Arreglo en las funcionalidades para editar información del usuario [#159611539] -	Se agregó un campo slug para subir imágenes -	Se puede cambiar las redes sociales existentes

--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_usuario.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_usuario.html
@@ -21,7 +21,7 @@
     {% endif %}
     {% if success %}
     <div id="componente_modal_info">
-        <modal-info v-if="showModal" url_redirect="{% url 'webadminradio:locutores' %}">
+        <modal-info v-if="showModal" url_redirect="{% url 'webadminradio:usuarios' %}">
             <h3 slot="header">Información</h3>
             <p slot="body">{{success}}</p>
         </modal-info>
