Componente para la creación de encuestas [#159614172] - Template para el form de encuestas - Componente para la edición de las preguntas

--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/encuestas.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/encuestas.html
@@ -4,7 +4,7 @@
 
 {% endblock %}
 {% block agregar_button %}
-<a href="{% url 'webadminradio:agregar_encuesta' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Crear nueva encuesta</i></a>
+<a href="{% url 'webadminradio:agregar_encuesta' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Agregar encuesta</i></a>
 {% endblock %}
 {% block content %}
     {% if messages %}
