Se añadio el campo de dia y hora fin para las encuestas y se actualizo las funcionalidades de guardar y modificar [#159614172]

--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/editar_encuesta.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/editar_encuesta.html
@@ -58,6 +58,17 @@
             <label id="descripcion">Descripción</label>
             <textarea class="form-control" id="descripcion" name="descripcion" row="3" oninvalid="this.setCustomValidity=('Ingrese una descipción válida para la encuesta')" oninput="this.setCustomValidity('')" maxlength="250" required>{{ encuesta.descripcion }}</textarea>
         </div>
+        <!-- Fecha fin de la encuesta -->
+        <div class="form-row">
+            <div class="form-group col-md-3">
+                <label>Fecha fin:</label>
+                <input type= "date" name="dia" value="{{ encuesta.dia_fin|date:'Y-m-d' }}" id="fecha_incioInput" class="custom-select form-control" required>
+            </div>
+            <div class="form-group col-md-3">
+                <label>Hora:</label>
+                <input name="hora" type="time" value="{{ encuesta.hora_fin }}" class="form-control" required>
+            </div>
+        </div>
         <hr>
         <h5><b>Creación de preguntas con sus alternativas</b></h5>
         <div class="form-group">
