--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/concursos.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/concursos.html
@@ -1,6 +1,6 @@
 {% extends 'webAdminRadio/base_site.html' %}
 {% load static from staticfiles %}
-{% block cdn_styles %}
+{% block cdn_stlyes %}
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
 {% endblock %}
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/componentes/modal_info.css' %}">
 {% endblock %}
 {% block agregar_button %}
-    <a href="{% url 'webadminradio:agregar_encuesta' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Agregar encuesta</i></a>
+    <a href="{% url 'webadminradio:agregar_concurso' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Agregar Concurso</i></a>
 {% endblock %}
 {% block content %}
     {% if messages %}
@@ -24,13 +24,14 @@
             </modal-info>
         </div>
     {% endif %}
+    <!-- Pop-up de borrar -->
     <div id="componente_borrar">
-    <modal-borrar v-if="showModal">
-        <h3 slot="header" class="action"><i class="fas fa-exclamation-triangle "></i>¡Aviso!</h3>
-        <div slot="body">
-            <p>¿Está seguro de que desea eliminar esta encuesta?</p>
-        </div>
-    </modal-borrar>
+        <modal-borrar v-if="showModal">
+            <h3 slot="header" class="action"><i class="fas fa-exclamation-triangle "></i>¡Aviso!</h3>
+            <div slot="body">
+                <p>¿Está seguro de que desea eliminar este concurso?</p>
+            </div>
+        </modal-borrar>
     </div>
     <label for="emisoraSelect" class="col-sm-1"><b>Emisora</b></label>
     <select id="emisoraSelect" class="custom-select form-control col-sm-4" name="emisora" oninvalid="this.setCustomValidity('Ingrese una emisora válida')" required oninput="this.setCustomValidity('')">
@@ -53,8 +54,6 @@
                     <th>Acciones</th>
                 </tr>
             </thead>
-            <tbody>
-            </tbody>
         </table>
     </div>
 {% endblock %}
@@ -62,12 +61,12 @@
     <script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
-    <script type="text/javascript" src="{% static 'webAdminRadio/js/select_em_seg.js' %}"></script>
+    <script type="text/javascript" src="{% static 'webAdminRadio/js/select_conc_seg.js' %}"></script>
     <script src="{% static 'webAdminRadio/js/componentes/ModalInfoComponent.js' %}"></script>
     <script src="{% static 'webAdminRadio/js/componentes/BorrarComponent.js' %}"></script>
     <script>
         function showWarning(id){
-            contenedorBorrar.$data.objects_to_delete = "encuestas";
+            contenedorBorrar.$data.objects_to_delete = "concursos";
             contenedorBorrar.$data.id = id;
             contenedorBorrar.$data.showModal = true;
         }
